// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefreshToken Controller /POST auth/refresh - should refresh the accessToken for user1: RefreshTokenCredentials 1`] = `
Object {
  "accessToken": "accessToken",
  "expiresIn": 86400000,
  "refreshToken": "refreshToken",
  "tokenType": "Bearer",
}
`;

exports[`RefreshToken Controller /POST auth/refresh - should throw error for missing token: MissingTokenError 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "isUuid": "refreshToken must be an UUID",
      },
      "property": "refreshToken",
      "target": Object {},
    },
  ],
  "statusCode": 400,
}
`;

exports[`RefreshToken Controller /POST auth/refresh - should throw error for wrong token format (not a UUID): NoUUIDTokenError 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "isUuid": "refreshToken must be an UUID",
      },
      "property": "refreshToken",
      "target": Object {
        "refreshToken": "notAUUID",
      },
      "value": "notAUUID",
    },
  ],
  "statusCode": 400,
}
`;

exports[`RefreshToken Controller /POST auth/refresh - should throw error not existing refreshToken: NotFoundRefreshTokenError 1`] = `
Object {
  "message": "RefreshToken not found.",
  "statusCode": 404,
}
`;
